k8s/startup/deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-hello
  namespace: default
spec:
  selector:
    matchLabels:
      app: nginx-hello

  # tells deployment to run 2 pods matching the template
  replicas: 2
  template:
    metadata:
      labels:
        app: nginx-hello
    spec:
      containers:
      - name: nginx-hello
        image: reg.ntl.nc/proxy/nginxdemos/hello:latest
        ports:
        - containerPort: 80
