k8s/startup/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  # match deployment selector
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
